# synelar

./: README.md  architecture.md
scripts/: deploy.ts  initialize.ts
synid/: Cargo.toml
synid/src/: lib.rs
tests/: synid.test.ts
